# envMatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs
src/commands/: mod.rs
src/config/: mod.rs
src/error/: mod.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
tests/: integration_tests.rs
